--- a/css/modules/_overrides.scss
+++ b/css/modules/_overrides.scss
@@ -6,15 +6,19 @@ p {
   font-family: $font-family-serif;
 }
 
-a,
-a:focus {
+a {
   color: $black;
   text-decoration: underline;
-}
 
-a:hover {
-  color: $link-hover-color;
-  @include transition(all .2s linear);
+  &:active,
+  &:focus {
+    @extend a;
+  }
+
+  &:hover {
+    color: $link-hover-color;
+    @include transition(all .2s linear);
+  }
 }
 
 .btn[disabled] {
