--- a/css/main.scss
+++ b/css/main.scss
@@ -1,4 +1,4 @@
-@import "vendor/bourbon/bourbon";
+@import "../bower_components/bourbon/dist/bourbon";
 @import "vendor/bootstrap-sass/bootstrap";
 
 @import "modules/typography";
