Clean up items from last version.

--- a/css/modules/_typography.scss
+++ b/css/modules/_typography.scss
@@ -1,102 +1,8 @@
-$font-family-sans-serif: "proxima-nova", "Helvetica Neue", helvetica, arial, sans-serif;
-$font-family-serif: "ff-tisa-web-pro", Georgia, "Times New Roman", Times, serif;
+$font-family-sans-serif: "Helvetica Neue", helvetica, arial, sans-serif;
+$font-family-serif: Georgia, "Times New Roman", Times, serif;
 
 $font-size-base: 16px;
 $font-size-scale-1: ceil(modular-scale($font-size-base, 1, $augmented-fourth));
 $font-size-scale-2: ceil(modular-scale($font-size-base, 2, $augmented-fourth));
 $font-size-scale-3: ceil(modular-scale($font-size-base, 3, $augmented-fourth));
 $font-size-scale-4: ceil(modular-scale($font-size-base, 4, $augmented-fourth));
-
-$screen-xxs: 320px;
-
-@media (max-width: 319px) {
-  h1 {
-    font-size: $font-size-scale-3;
-  }
-
-  p,
-  label,
-  .form-control {
-    font-size: $font-size-base;
-  }
-  
-  p {
-    width: 15em;
-  }
-}
-
-@media (min-width: $screen-xxs) {
-  h1 {
-    font-size: $font-size-scale-3;
-  }
-
-  p,
-  label,
-  .form-control {
-    font-size: $font-size-base;
-  }
-  
-  p {
-    width: 18em;
-  }
-}
-
-@media (min-width: $screen-xs) {
-  h1 {
-    font-size: $font-size-scale-3;
-  }
-
-  p,
-  label,
-  .form-control {
-    font-size: 18px;
-  }
-  
-  p {
-    width: 25em;
-  }
-}
-
-@media (min-width: $screen-sm) {
-  h1 {
-    font-size: $font-size-scale-4;
-  }
-
-  p,
-  label,
-  .form-control {
-    font-size: $font-size-scale-1;
-  }
-  
-  p {
-    width: 30em;
-  }
-  
-  .works p {
-    width: 27em;
-  }
-}
-
-@media (min-width: $screen-md) {
-  h1 {
-    font-size: $font-size-scale-4;
-  }
-
-  p,
-  label,
-  .form-control {
-    font-size: $font-size-scale-1;
-  }
-  
-  p {
-    width: 33em;
-  }
-
-  .works p {
-    width: 27em;
-  }
-}
-
-@media(min-width: $screen-lg) {
-
-}
