--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@ html {
   font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 42px;
   font-weight: 300;
-  color: #555;
+  color: #666;
 }
 
 body {
@@ -15,7 +15,7 @@ a:focus
 a:visited {
   color: inherit;
   text-decoration: none;
-  border-bottom: 2px solid #555;
+  border-bottom: 2px solid #666;
 }
 
 a:hover {
@@ -28,55 +28,11 @@ section div:first-child {
   color: rgba(5, 111, 119, 0.41);
 }
 
-.grid .pre-half,
-.grid .pre-w-1-2 {
-  margin-left: 50%;
-}
-
-.grid .pre-one-third,
-.grid .pre-w-1-3 {
-  margin-left: 33.3332%;
-}
-
-.grid .pre-two-thirds,
-.grid .pre-w-2-3 {
-  margin-left: 66.6665%;
-}
-
-.grid .pre-one-quarter,
-.grid .pre-one-fourth,
-.grid .pre-w-1-4 {
+.grid .pre-one-fourth {
   margin-left: 25%;
 }
 
-.grid .pre-three-quarters,
-.grid .pre-three-fourths,
-.grid .pre-w-3-4 {
-  margin-left: 75%;
-}
-
-.grid .pre-one-fifth,
-.grid .pre-w-1-5 {
-  margin-left: 20%;
-}
-
-.grid .pre-two-fifths,
-.grid .pre-w-2-5 {
-  margin-left: 40%;
-}
-
-.grid .pre-three-fifths,
-.grid .pre-w-3-5 {
-  margin-left: 60%;
-}
-
-.grid .pre-four-fifths,
-.grid .pre-w-4-5 {
-  margin-left: 80%;
-}
-
-.grid .pre-one-tenth,
-.grid .pre-w-1-10 {
+.grid .pre-one-tenth {
   margin-left: 10%;
 }
 
@@ -96,28 +52,8 @@ section div:first-child {
     border-width: 1px;
   }
 
-  .grid .pre-half,
-  .grid .pre-w-1-2,
-  .grid .pre-one-third,
-  .grid .pre-w-1-3,
-  .grid .pre-two-thirds,
-  .grid .pre-w-2-3,
-  .grid .pre-one-quarter,
   .grid .pre-one-fourth,
-  .grid .pre-w-1-4,
-  .grid .pre-three-quarters,
-  .grid .pre-three-fourths,
-  .grid .pre-w-3-4,
-  .grid .pre-one-fifth,
-  .grid .pre-w-1-5,
-  .grid .pre-two-fifths,
-  .grid .pre-w-2-5,
-  .grid .pre-three-fifths,
-  .grid .pre-w-3-5,
-  .grid .pre-four-fifths,
-  .grid .pre-w-4-5,
-  .grid .pre-one-tenth,
-  .grid .pre-w-1-10 {
+  .grid .pre-one-tenth {
     padding-left: 0 !important;
     margin-left: 0 !important;
   }
