--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,11 @@ a:visited {
   border-bottom: 2px solid #656565;
 }
 
+a:hover {
+  color: #333;
+  border-bottom-color: #333;
+}
+
 h1 {
   font-size: 42px;
   color: #333;
